--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Tenakata project</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="student_height">Student Height</string>
     <string name="enter_full_name">Enter Full Name</string>
     <string name="date_of_birth">Date Of Birth</string>
+    <string name="enter_height">Enter Height(in centimeters)</string>
 </resources>
