--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,26 @@
     <string name="enter_full_name">Enter Full Name</string>
     <string name="date_of_birth">Date Of Birth</string>
     <string name="enter_height">Enter Height(in centimeters)</string>
+    <string name="select_status">Marital Status</string>
+    <string name="select_country">Select Country</string>
+    <string name="add_student">Add Student</string>
+    <string name="view_student">View Student</string>
+    
+    <string-array name="status">
+        <item>Single</item>
+        <item>Married</item>
+    </string-array>
+
+    <string-array name="location">
+        <item>London</item>
+        <item>Singapore</item>
+        <item>United Kingdom</item>
+        <item>Canada</item>
+        <item>Kenya</item>
+        <item>Uganda</item>
+        <item>India</item>
+        <item>Australia</item>
+        <item>China</item>
+        <item>Japan</item>
+    </string-array>
 </resources>
